--- a/ticket_project_sync.yml
+++ b/ticket_project_sync.yml
@@ -30,8 +30,8 @@
           force_basic_auth: yes
         register: api_output
 
-        set_fact:
-          project_id: "{{ api_output.json.results[0].id }}"
+      -  set_fact:
+           project_id: "{{ api_output.json.results[0].id }}"
 
       - name: Project sync
         uri:
