fixed issue in project role

--- a/roles/project_update/tasks/main.yml
+++ b/roles/project_update/tasks/main.yml
@@ -20,3 +20,9 @@
     validate_certs: False
     force_basic_auth: yes
     status_code: 202
+  register: prosync
+
+
+- name:
+  debug:
+    var: prosync
