--- a/project_sync.yml
+++ b/project_sync.yml
@@ -17,3 +17,8 @@
       include_role:
        name: failed
       when: valid_rep == "0"
+ 
+    - name: success
+      include_role:
+       name: success
+      when: prosync.status == 202
