--- a/project_sync.yml
+++ b/project_sync.yml
@@ -18,7 +18,7 @@
        name: failed
       when: valid_rep == "0"
  
-    - name: success
-      include_role:
-       name: success
-      when: prosync.status == 202
+#    - name: success
+#      include_role:
+#       name: success
+#      when: prosync.status == 202
